<resources>
    <string name="app_name">Race to the Magnet</string>
    <string name="racer_name">Racer Name</string>
    <string name="camera_denied">Camera permissions denied. You cannot set race images.</string>
    <string name="magnet_status">Status: %1$s</string>
    <string name="average_strength">Average Magnetic Field Strength: %1$f</string>
    <string name="magnetic_threshold">Magnetic Threshold: %1$.2f</string>
    <string name="create_race">CREATE RACE</string>
    <string name="settings">SETTINGS</string>
    <string name="history">HISTORY</string>
    <string name="attempt_number">Attempt %1$d: </string>
    <string name="race">RACE</string>
    <string name="placeholder">PLACEHOLDER</string>
    <string name="unreliable">UNRELIABLE.\n[RECALIBRATE BY DOING FIGURE-8 MOTION]</string>
    <string name="primary_channel">Primary Channel</string>
    <string name="channel_description">Notify the users when the sensors are enabled.</string>
    <string name="race_started">Race Started</string>
    <string name="started_notify_desc">The timer is currently being run in the background.</string>
    <string name="race_ended">Race Ended</string>
    <string name="race_ended_notify_desc">Time is not being recorded anymore.</string>
    <string name="put_phone_in_pocket">Timer will start soon, put phone in pocket!</string>
    <string name="stop_timer">STOP TIMER</string>
    <string name="show_results">Show Results</string>
    <string name="racer_s_attempts">Racer\'s Attempts</string>
    <string name="start_timer">START TIMER</string>
    <string name="_0_00">0.00</string>
    <string name="current_racer">CURRENT RACER</string>
    <string name="need_one_racer">You need at least one racer to race!</string>
    <string name="no_race">You need to create a race in order to race!</string>
    <string name="double_failed">Failed to parse double.</string>
    <string name="overwrite_prompt">Do you want to overwrite your current race data? All attempts would be cleared.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="photo_title">Race Course Image</string>
    <string name="photo_description">An image of a race course that you have created.</string>
    <string name="show_results_description">Show Results? This will end the current race."</string>
    <string name="confirm">Confirm"</string>
    <string name="notify_error">Error, notification sound cannot be accessed. Did the user uninstall the app before?</string>
    <string name="delete_all_history">Clear the race history?</string>
    <string name="race_number">Race #%1$d</string>
    <string name="stop_timer_automatic">Are you sure you want to force stop the timer?</string>
    <string name="racer_number">Racer #%1$d</string>
    <string name="delete_all">Delete All</string>
    <string name="input_race_name">INPUT RACE NAME</string>
    <string name="image_of_the_obstacle_course">Image of the obstacle course.</string>
    <string name="racers">RACERS</string>
    <string name="add_row">Add Row</string>
    <string name="delete_row">Delete Row</string>
    <string name="automatic">AUTOMATIC</string>
    <string name="manual">MANUAL</string>
    <string name="stopwatch_mode">STOPWATCH MODE</string>
    <string name="sensor_settings">SENSOR SETTINGS</string>
    <string name="enable_light_sensor_to_detect_pocket">Enable Light Sensor to Detect Pocket</string>
    <string name="begin_race">Begin Race</string>
    <string name="start_delay_time">Start Delay Time</string>
    <string name="_5">5</string>
    <string name="default_magnetic_threshold">Default Magnetic Threshold</string>
    <string name="_75">75</string>
    <string name="pocket_ambient_detection">Pocket Ambient Detection</string>
    <string name="_0">0</string>
    <string name="enable_light_sensor_on_default">Enable Light Sensor on Default</string>
    <string name="notification_sound">Notification Sound</string>
    <string name="change_sound_from_file">Change sound from file</string>
    <string name="delete">Delete</string>
    <string name="results">RESULTS</string>
    <string name="reset_to_default_sound">Default Sound</string>
    <string name="sound_channel">Sound Channel</string>
    <string name="file_delete_fail">File failed to delete.</string>
    <string name="cancel">Cancel</string>
    <string name="delete_entry">Delete race from history?</string>
</resources>