<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:background="?attr/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/scrollViewConstraint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.025" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.975" />

            <EditText
                android:id="@+id/editRaceName"
                style="@style/Header"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                android:drawableStart="@drawable/ic_baseline_edit_24"
                android:drawablePadding="-10dp"
                android:hint="@string/input_race_name"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColorHint="@color/white"
                android:textSize="28sp"
                app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
                app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
                app:layout_constraintTop_toTopOf="parent"
                android:importantForAutofill="no" />

            <ImageButton
                android:id="@+id/imageButtonRace"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/image_placeholder"
                android:scaleType="centerCrop"
                app:layout_constraintDimensionRatio="1:0.65"
                app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
                app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
                app:layout_constraintTop_toBottomOf="@+id/editRaceName"
                android:contentDescription="@string/image_of_the_obstacle_course" />

            <TextView
                android:id="@+id/headerRacer"
                style="@style/Header"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="5dp"
                android:text="@string/racers"
                app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
                app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
                app:layout_constraintTop_toBottomOf="@+id/imageButtonRace" />

            <LinearLayout
                android:id="@+id/racersLinearLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
                app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
                app:layout_constraintTop_toBottomOf="@+id/buttonAddRow"/>

            <Button
                android:id="@+id/buttonAddRow"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/add_row"
                app:layout_constraintEnd_toStartOf="@+id/buttonDeleteRow"
                app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
                app:layout_constraintTop_toBottomOf="@+id/headerRacer"
                app:layout_constraintWidth_percent="0.4" />

            <Button
                android:id="@+id/buttonDeleteRow"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/delete_row"
                app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
                app:layout_constraintStart_toEndOf="@+id/buttonAddRow"
                app:layout_constraintTop_toBottomOf="@+id/headerRacer"
                app:layout_constraintWidth_percent="0.4" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="50dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
                app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
                app:layout_constraintTop_toBottomOf="@+id/textView">

                <RadioButton
                    android:id="@+id/radioAuto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/automatic" />

                <RadioButton
                    android:id="@+id/radioManual"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingStart="-20dp"
                    android:text="@string/manual"
                    tools:ignore="RtlSymmetry" />
            </RadioGroup>

            <TextView
                android:id="@+id/textView"
                style="@style/Header"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="5dp"
                android:text="@string/stopwatch_mode"
                app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
                app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
                app:layout_constraintTop_toBottomOf="@+id/racersLinearLayout" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/sensorSettingsConstraint"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
                app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup">

                <TextView
                    android:id="@+id/textView6"
                    style="@style/Header"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:text="@string/sensor_settings"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/sensorSettingsConstraint"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textViewMagnetStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/magnet_status"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView6" />

                <TextView
                    android:id="@+id/textViewAverageStrength"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/average_strength"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewMagnetStatus" />

                <EditText
                    android:id="@+id/editMagnetThreshold"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:hint="@string/magnetic_threshold"
                    android:imeOptions="actionDone"
                    android:inputType="numberDecimal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewAverageStrength"
                    tools:ignore="Autofill" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switchLight"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/enable_light_sensor_to_detect_pocket"
                    android:textColor="@android:color/tab_indicator_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editMagnetThreshold" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/buttonStartRace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/begin_race"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sensorSettingsConstraint" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>