<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardRace"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="top"
    android:layout_margin="4dp"
    android:orientation="vertical"
    card_view:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/race_card_background">

        <TextView
            android:id="@+id/orderTotalView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@color/white"
            android:backgroundTint="@color/red"
            android:gravity="center"
            android:textSize="22sp"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/buttonDeleteRace" />

        <TextView
            android:id="@+id/viewRaceName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:backgroundTint="@color/red"
            android:gravity="center"
            android:text="@string/placeholder"
            android:textColor="@color/white"
            android:textSize="22sp"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonDeleteRace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/red_dark"
            android:text="@string/delete"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/tableResults" />

        <ImageView
            android:id="@+id/imageResultPhoto"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            android:background="@color/black"
            android:scaleType="centerCrop"
            card_view:layout_constraintDimensionRatio="1:0.65"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/viewRaceName"
            card_view:layout_constraintWidth_percent="0.7"
            android:contentDescription="@string/image_of_the_obstacle_course" />

        <TextView
            android:id="@+id/textView2"
            style="@style/HeaderNoRatio"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/ribbon"
            android:backgroundTint="@color/red"
            android:text="@string/results"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/imageResultPhoto" />

        <TableLayout
            android:id="@+id/tableResults"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="65dp"
            android:layout_marginEnd="65dp"
            android:background="@color/white"
            android:stretchColumns="*"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/textView2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>